# task-changes

./: Cargo.toml  README.md
src/: changes.rs  main.rs  pager.rs
src/taskdb/: mod.rs  undodata.rs
src/taskdb/tests/: task_mock.sh  undo.data
src/tests/: task_mock.sh
