[package]
name = "task-changes"
version = "0.1.3"
authors = ["ayosec@gmail.com"]
edition = "2018"
description = "Show changes in a Taskwarrior database."
license = "Apache-2.0"
readme = "README.md"

[dependencies]
atty = "0.2.14"
chrono = "0.4.19"
colored = "2.0.0"
lazy_static = "1.4.0"
memchr = "2.3.4"
nom = "6.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.0.0"

[package.metadata.deb]
extended-description = ""
