[package]
name = "task-changes"
version = "0.1.4"
authors = ["ayosec@gmail.com"]
edition = "2018"
description = "Show changes in a Taskwarrior database."
license = "Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0.68"
atty = "0.2.14"
chrono = { version = "0.4", default_features = false, features = ["clock"] }
clap = { version = "4.1.1", features = ["derive"] }
colored = "2.0.0"
lazy_static = "1.4.0"
memchr = "2.3.4"
nom = "6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.0.0"

[package.metadata.deb]
extended-description = ""
